[package]
name = "ring_ring"
version = "0.1.0"
edition = "2021"
authors = ["Demiurge67"]
license = "GPL-3.0"
description = "P2P encrypted messenger core library"
repository = "https://github.com/Demiurge67/Ring-Ring"

[lib]
name = "ring_ring"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# QUIC transport
quinn = "0.11"
rustls = "0.23"
rcgen = "0.12"

# Crypto & keys
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
